# api/openapi/model/currency_values.go
@@ -1,0 +1,149 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package model
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"bytes"
+	"encoding/json"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// CurrencyValues currency values
+//
+// swagger:model CurrencyValues
+type CurrencyValues struct {
+
+	// c h a n g e24 h o u r
+	CHANGE24HOUR string `json:"CHANGE24HOUR,omitempty"`
+
+	// c h a n g e p c t24 h o u r
+	CHANGEPCT24HOUR string `json:"CHANGEPCT24HOUR,omitempty"`
+
+	// o p e n24 h o u r
+	OPEN24HOUR string `json:"OPEN24HOUR,omitempty"`
+
+	// v o l u m e24 h o u r
+	VOLUME24HOUR string `json:"VOLUME24HOUR,omitempty"`
+
+	// v o l u m e24 h o u r t o
+	VOLUME24HOURTO string `json:"VOLUME24HOURTO,omitempty"`
+
+	// l o w24 h o u r
+	LOW24HOUR string `json:"LOW24HOUR,omitempty"`
+
+	// h i g h24 h o u r
+	HIGH24HOUR string `json:"HIGH24HOUR,omitempty"`
+
+	// p r i c e
+	// Required: true
+	PRICE *string `json:"PRICE"`
+
+	// s u p p l y
+	SUPPLY string `json:"SUPPLY,omitempty"`
+
+	// m k t c a p
+	MKTCAP string `json:"MKTCAP,omitempty"`
+}
+
+// UnmarshalJSON unmarshals this object while disallowing additional properties from JSON
+func (m *CurrencyValues) UnmarshalJSON(data []byte) error {
+	var props struct {
+
+		// c h a n g e24 h o u r
+		CHANGE24HOUR string `json:"CHANGE24HOUR,omitempty"`
+
+		// c h a n g e p c t24 h o u r
+		CHANGEPCT24HOUR string `json:"CHANGEPCT24HOUR,omitempty"`
+
+		// o p e n24 h o u r
+		OPEN24HOUR string `json:"OPEN24HOUR,omitempty"`
+
+		// v o l u m e24 h o u r
+		VOLUME24HOUR string `json:"VOLUME24HOUR,omitempty"`
+
+		// v o l u m e24 h o u r t o
+		VOLUME24HOURTO string `json:"VOLUME24HOURTO,omitempty"`
+
+		// l o w24 h o u r
+		LOW24HOUR string `json:"LOW24HOUR,omitempty"`
+
+		// h i g h24 h o u r
+		HIGH24HOUR string `json:"HIGH24HOUR,omitempty"`
+
+		// p r i c e
+		// Required: true
+		PRICE *string `json:"PRICE"`
+
+		// s u p p l y
+		SUPPLY string `json:"SUPPLY,omitempty"`
+
+		// m k t c a p
+		MKTCAP string `json:"MKTCAP,omitempty"`
+	}
+
+	dec := json.NewDecoder(bytes.NewReader(data))
+	dec.DisallowUnknownFields()
+	if err := dec.Decode(&props); err != nil {
+		return err
+	}
+
+	m.CHANGE24HOUR = props.CHANGE24HOUR
+	m.CHANGEPCT24HOUR = props.CHANGEPCT24HOUR
+	m.OPEN24HOUR = props.OPEN24HOUR
+	m.VOLUME24HOUR = props.VOLUME24HOUR
+	m.VOLUME24HOURTO = props.VOLUME24HOURTO
+	m.LOW24HOUR = props.LOW24HOUR
+	m.HIGH24HOUR = props.HIGH24HOUR
+	m.PRICE = props.PRICE
+	m.SUPPLY = props.SUPPLY
+	m.MKTCAP = props.MKTCAP
+	return nil
+}
+
+// Validate validates this currency values
+func (m *CurrencyValues) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validatePRICE(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *CurrencyValues) validatePRICE(formats strfmt.Registry) error {
+
+	if err := validate.Required("PRICE", "body", m.PRICE); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *CurrencyValues) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *CurrencyValues) UnmarshalBinary(b []byte) error {
+	var res CurrencyValues
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
