# internal/cryptocompareapi/models.go
@@ -7,7 +7,6 @@ import (
 const (
 	RAW     = "RAW"
 	DISPLAY = "DISPLAY"
-
 	splitS     = ","
 	splitPoint = "."
 )
@@ -16,19 +15,6 @@ type (
 	CurrencyParams struct {
 		Fsyms string `yaml:"fsyms"`
 		Tsyms string `yaml:"tsyms"`
-	}
-
-	CurrencyValues struct {
-		CHANGE24HOUR    string
-		CHANGEPCT24HOUR string
-		OPEN24HOUR      string
-		VOLUME24HOUR    string
-		VOLUME24HOURTO  string
-		LOW24HOUR       string
-		HIGH24HOUR      string
-		PRICE           string
-		SUPPLY          string
-		MKTCAP          string
 	}
 )
 
